--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,6 +131,12 @@ repositories {
     }
 }
 
+configurations.all {
+    resolutionStrategy {
+        force 'com.android.support:support-annotations:25.1.1'
+    }
+}
+
 dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:customtabs:25.3.1'
@@ -160,6 +166,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
     androidTestCompile 'com.squareup.okhttp3:mockwebserver:3.7.0'
+    androidTestCompile "tools.fastlane:screengrab:1.0.2"
 }
 
 // -------------------------------------------------------------------------------------------------
